# leafmine-signature

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  config.toml  data_paths.py  main.py  pyproject.toml
controllers/: __init__.py  artifact_status.py  artifacts.py  bulk_skeletonization.py  data_paths.py  line_extension.py  pipeline.py  polyline.py  polyline_graph.py  polyline_route.py  polyline_signatures.py  settings.py  signature.py  skeletonization.py  umap.py
gradio-app/: app.py
models/: __init__.py  graph_render.py  longest_component.py  polyline_utils.py  route.py  signature.py  skeleton_graph.py  skeletonization.py  skeletonization_utils.py  umap.py
models/utils/: __init__.py  artifact_lookup.py  image_io.py  naming.py
scripts/: generate_sample_annotation.py  remove_data.sh
views/: app.py  config.py
views/components/: __init__.py  file_select.py
views/tabs/: line_extension.py  manual_route.py  pipeline.py  polyline.py  signature.py  skeletonization.py  umap.py
